Modernized theme modify form styling

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -378,6 +378,19 @@ form[name="delete_item"], form[name="rename_item"], form[name="destroy_item"]
             width 100%
     dt
         width 20%
+
+#moin-modify
+    dd
+        width 100%
+        input
+            width 99%
+    dt
+        width auto
+        text-align left
+    textarea
+        width 99.5%
+    input[type="submit"]
+        margin-left 0
         
 #options
     dd
@@ -502,7 +515,7 @@ p.searchhint
     display inline
     margin .33em 0
     padding 3px
-    width 70%
+    width 99%
 
 #moin-editor-help
     font-size small
