--- a/MoinMoin/templates/modify.html
+++ b/MoinMoin/templates/modify.html
@@ -33,7 +33,7 @@
 
 {% block content %}
 <h1>{{ title }}</h1>
-<div class="moin-form">
+<div id="moin-modify" class="moin-form">
     {{ gen.form.open(form, method='post', enctype='multipart/form-data') }}
     {{ forms.render_errors(form) }}
     {#
