--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -279,6 +279,11 @@ input.blank{border-color:#4e7da9;border-width:2px}
 .moin-form button,.moin-form input[type="submit"]{margin-left:48%}
 form[name="delete_item"] dd input,form[name="rename_item"] dd input,form[name="destroy_item"] dd input{width:100%}
 form[name="delete_item"] dt,form[name="rename_item"] dt,form[name="destroy_item"] dt{width:20%}
+#moin-modify dd{width:100%;}
+#moin-modify dd input{width:99%}
+#moin-modify dt{width:auto;text-align:left}
+#moin-modify textarea{width:99.5%}
+#moin-modify input[type="submit"]{margin-left:0}
 #options dd{float:none;width:38%;display:table-cell;padding:1.2em}
 #options dt{margin-left:10%;text-align:left;width:61%;margin-top:1.3em}
 #moin-usersettings a{color:#00008b}
@@ -301,7 +306,7 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .searchpages tr,.searchpages td{border:0;padding:5px;margin:0;text-align:center;vertical-align:middle;color:#000;font-weight:bold;font-size:1.05em}
 .searchpages td a,.searchpages td a:link{text-decoration:underline}
 #f_data_text{border:1px solid #4e7da9;font-family:monospace;margin:.33em 0;padding:3px;width:100%}
-#f_comment,#f_summary,#f_textcha{border:1px solid #4e7da9;display:inline;margin:.33em 0;padding:3px;width:70%}
+#f_comment,#f_summary,#f_textcha{border:1px solid #4e7da9;display:inline;margin:.33em 0;padding:3px;width:99%}
 #moin-editor-help{font-size:small;background-color:#eef1f6}
 #preview{border:1px solid #4e7da9;padding:10px 30px 20px 30px;background:url("../img/draft.png");margin-top:.5em}
 .moin-hist-rev input{float:left}
