--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1137,7 +1137,7 @@ a.moin-nonexistent:hover
 
 #moin-searchform #moin-search-submit
     text-indent -9000%
-    margin-left -24px
+    margin-left -26px
     width 20px
     height 16px
     background url(../img/moin-search.png) center center no-repeat
@@ -1146,12 +1146,14 @@ a.moin-nonexistent:hover
     overflow hidden
     vertical-align middle
     cursor pointer
+    padding 0px
+    box-shadow none
 
 #moin-searchform #moin-search-query
     padding-right 20px
 
 #moin-searchform div
-    margin 0
+    margin 0px 5px 0px 0px
 
 #moin-long-searchform
     padding 0
