--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -242,13 +242,13 @@ pre.comment:before{content:url("../img/attention.png")}
 .monospaced{font-family:monospace}
 table{margin:.5em;border-collapse:collapse}
 th,td{padding:.3em .4em;vertical-align:middle;text-align:left}
-th{border:1px solid #4e7da9;background-color:#708090}
+th{border:1px solid #4e7da9;background-color:#708090;text-align:center;color:#d8dfe9}
 td{border:1px solid #4e7da9}
 td p{margin:0;padding:0}
-table.zebra{border:none;border-collapse:separate;border-spacing:1px}
+table.zebra{border-collapse:separate;border-spacing:1px}
 .zebra thead{background-color:#708090}
 .zebra tfoot{background-color:#dfdfdf}
-.zebra th,.zebra td{border:none}
+.zebra td{border:none}
 .zebra tbody tr,.zebra > tr{background-color:#eef1f6}
 .zebra tbody tr:nth-child(odd),.zebra > tr:nth-child(odd){background-color:#d8dfe9}
 div.moin-table-of-contents{border:1px solid #4e7da9;color:#000;background:#fff;font-size:80%;margin:.5em 0 .75em 1em;padding:.5em .75em .5em .5em;text-indent:-1em;max-width:35%;text-align:left;float:right;clear:both;box-shadow:3px 3px 6px #9d9d9b;border-radius:15px}
@@ -312,6 +312,11 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .moin-hist-rev input{float:left}
 .moin-hist-rev{margin:0}
 #moin-global-history,#moin-page-history{font-size:75%}
+#moin-page-history table{border:1px solid #4e7da9;border-radius:5px;}
+#moin-page-history table thead{border-top-left-radius:5px;border-top-right-radius:5px;}
+#moin-page-history table thead tr th{text-align:center;}
+#moin-page-history table thead tr th input[type="Submit"]{padding:4px 10px;box-shadow:1px 1px 2px #9d9d9b;cursor:pointer;font-size:1em;}
+#moin-page-history table thead tr th input[type="Submit"]:hover{box-shadow:1px 1px 2px #000}
 .moin-wordbreak{word-break:break-all;word-wrap:break-word}
 .moin-history-time{width:10%}
 .moin-history-contenttype{width:18%}
@@ -319,11 +324,11 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .moin-history-comment{width:30%}
 .moin-action{width:2%}
 .moin-action a:hover{text-decoration:none}
-.moin-history-container{border:1px solid #4e7da9;margin:2em 0}
-.moin-history-container-header{background:#708090;margin:0;padding:4px;color:#fff;border-bottom:1px solid #4e7da9}
+.moin-history-container{border:1px solid #4e7da9;margin:2em 2em;border-top-left-radius:5px;border-top-right-radius:5px}
+.moin-history-container-header{background:#708090;margin:0;padding:4px;color:#fff;border-bottom:1px solid #4e7da9;border-top-left-radius:5px;border-top-right-radius:5px;}
 .moin-history-container-header h2{display:inline;border:none}
 .moin-history-container-header a.bookmark-link{margin-left:10px;color:#fff}
-.moin-history-container-body{margin:0;padding:0;font-size:14px}
+.moin-history-container-body{margin:0;padding:0;font-size:1.2em;}
 .moin-history-container-body table{margin:0;width:100%}
 .moin-history-save:before{content:url("../img/moin-edit.png")}
 .moin-history-trash:before{content:url("../img/moin-deleted.png")}
