--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -315,6 +315,22 @@ table.navigation
 .moin-rev-navigation-older,
 .moin-rev-navigation-newer
     padding 0 20px 0 20px
+    
+// create table
+#moin-create-table
+    width 95%
+    margin-left auto
+    margin-right auto
+    tbody tr 
+            th
+                text-align center
+                background header_color
+                margin 2px
+            td
+                text-align center
+                background page_color
+                a
+                    color link_color
 
 // form
 label
