--- a/MoinMoin/templates/modify_show_contenttype_selection.html
+++ b/MoinMoin/templates/modify_show_contenttype_selection.html
@@ -5,15 +5,15 @@
 {# XXX should show itemtype's display name #}
 {{ _("Please select the contenttype of the new %(itemtype)s item.", itemtype=itemtype) }}
 </p>
-<table class="zebra">
+<table id="moin-create-table" class="zebra">
     {% for gname, contenttypes in contenttype_groups %}
     <tr>
         <th>{{ gname }}</th>
     </tr>
     <tr>
-        <td>
+        <td> |&nbsp
         {% for ctname, ctlabel in contenttypes %}
-            <a href="{{ url_for('frontend.modify_item', item_name=item_name, itemtype=itemtype, contenttype=ctname) }}">{{ ctlabel }}</a> -
+            <a href="{{ url_for('frontend.modify_item', item_name=item_name, itemtype=itemtype, contenttype=ctname) }}">{{ ctlabel }}</a> &nbsp|&nbsp
         {% endfor %}
         </td>
     </tr>
