Selected link class name changed due to duplication

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -710,7 +710,7 @@ a
     &.moin-nonexistent:active
         color nonexistent_hover_color
 
-.current
+.current-link
     color selected_link_color !important
 
 // moin-flash & error
