Modernized theme current selected link styling

--- a/MoinMoin/templates/itemviews.html
+++ b/MoinMoin/templates/itemviews.html
@@ -1,5 +1,5 @@
 {% set exists = storage.has_item(item_name) %}
-<ul class="moin-itemviews">
+<ul class="moin-itemviews panel">
     {%- for endpoint, label, title, check_exists in cfg.item_views if not endpoint in cfg.endpoints_excluded %}
         {%- if not check_exists or check_exists and exists %}
             {%- if endpoint in [
