--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1149,6 +1149,9 @@ a.moin-nonexistent:hover
     color hover_color 
     text-decoration underline
 
+.current-link
+    color inherit !important
+    
 #moin-header
     margin 0px
     padding 0px 0px 10px 0px
@@ -1255,6 +1258,7 @@ a.moin-nonexistent:hover
     margin 0
     padding 0 10px
     font-size 0.82em
+    color visited_color
 
 #moin-navibar li
     float left
@@ -1302,6 +1306,7 @@ a.moin-nonexistent:hover
     border-bottom border_style
     border-top border_style
     border-radius 9px
+    color selected_link_color
 
 .moin-itemviews li
     display inline-block
