--- a/MoinMoin/templates/layout.html
+++ b/MoinMoin/templates/layout.html
@@ -124,7 +124,7 @@
 
     {% set navibar_items = theme_supp.navibar(item_name) %}
     {% if navibar_items %}
-        <ul id="moin-navibar">
+        <ul id="moin-navibar" class="panel">
         {% for cls, url, text, title in navibar_items %}
             <li class="{{ cls }}">
                 <a href="{{ url }}" {% if title %}title="{{ title }}"{% endif %}>{{ text }}</a>
