--- a/MoinMoin/themes/modernized/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/color_palette.styl
@@ -8,7 +8,7 @@ header_bg_color = #708090
 footer_color = #737373
 heading_color = #ffffff
 panel_color = #708090
-panel_item_color = #e6e6e6
+panel_item_color = #cfcfcf
 border_color = #4e7da9
 shadow_color = #9d9d9b
 table_bg_color = #eef1f6
@@ -19,5 +19,5 @@ active_color = #51d443
 visited_color = #008B8B
 nonexistent_link_color = #939393
 nonexistent_hover_color = #1f62ad
-selected_link_color = #F82A2A
+selected_link_color = #ffffff
 error_color = #ff2727
