Modernized theme blog page CSS converted to stylus generated CSS

--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -47,16 +47,6 @@ table { border-collapse: collapse; border-spacing: 0; }
 hr { display: block; height: 1px; border: 0; border-top: 1px solid #cccccc; margin: 1em 0; padding: 0; }
 input, select { vertical-align: middle; }
 /* end HTML5 reset */
-/* blog page */
-#moin-blog-header { margin: 1em 0 -1em 0; }
-#moin-blog-content { padding: 0 2em 0 0; display: table-cell }
-#moin-blog-sidebar { width: 15em; display: table-cell; }
-.moin-blog-entry-info { font-size: 0.8em; color: #888888; }
-.moin-blog-entry-bottominfo { font-size: 0.8em; color: #888888; padding: 0em 1em; border: 1px solid #DEDEDE;}
-ul.moin-blog-entry-tags { list-style: none; display: inline; margin: 0; }
-ul.moin-blog-entry-tags li { display: inline; }
-ul.moin-blog-entry-tags li:after { content: ","; } 
-ul.moin-blog-entry-tags li:last-child:after { content: ""; }
 /* smileys -- <span class="moin-text-icon moin-smile">:-)</span> */
 .moin-text-icon { font-size: 0; color: transparent; }
 .moin-alert:before { content: url('../img/smileys/alert.png'); }
@@ -316,6 +306,15 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 #preview{border:1px solid #4e7da9;padding:10px 30px 20px 30px;background:url("../img/draft.png");margin-top:.5em}
 .moin-hist-rev input{float:left}
 .moin-hist-rev{margin:0}
+#moin-blog-header{margin:1em 0 -1em 0}
+#moin-blog-content{padding:0 2em 0 0;display:table-cell}
+#moin-blog-sidebar{width:15em;display:table-cell}
+.moin-blog-entry-info{font-size:.8em;color:#737373}
+.moin-blog-entry-bottominfo{font-size:.8em;color:#737373;padding:0 1em;border:1px solid #4e7da9}
+ul.moin-blog-entry-tags{list-style:none;display:inline;margin:0;}
+ul.moin-blog-entry-tags li{display:inline;}
+ul.moin-blog-entry-tags li:after{content:","}
+ul.moin-blog-entry-tags li:last-child:after{content:""}
 #moin-global-history,#moin-page-history{font-size:75%}
 #moin-page-history table{border:1px solid #4e7da9;border-radius:5px;}
 #moin-page-history table thead{border-top-left-radius:5px;border-top-right-radius:5px;}
