--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -558,6 +558,41 @@ p.searchhint
 .moin-hist-rev
     margin 0
 
+// blog page
+#moin-blog-header
+    margin 1em 0 -1em 0
+
+#moin-blog-content
+    padding 0 2em 0 0
+    display table-cell
+
+#moin-blog-sidebar
+    width 15em
+    display table-cell
+
+.moin-blog-entry-info
+    font-size 0.8em
+    color footer_color
+
+.moin-blog-entry-bottominfo
+    font-size 0.8em
+    color footer_color
+    padding 0em 1em
+    border border_style
+
+ul.moin-blog-entry-tags
+    list-style none
+    display inline
+    margin 0
+    li
+        display inline
+        &:after
+            content ","
+
+ul.moin-blog-entry-tags li:last-child
+    &:after
+        content ""  
+    
 #moin-global-history,
 #moin-page-history
     font-size 75%
