--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -131,7 +131,8 @@ ul.moin-nobullet-list
     list-style-type none
 
 ol, ul
-    margin-top 1em
+    margin-top .5em
+    margin-bottom .5em
 
 li ol, li ul
     margin-top .25em
