--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1594,6 +1594,9 @@ a.moin-nonexistent
 
     #moin-pageinfo a
         color footer_color
+    
+    .moin-subitem-navigation
+        display none
 
 @media projection
     html
