Modernized theme index border width changed

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -824,8 +824,8 @@ ul.moin-blog-entry-tags li:last-child
     text-decoration none
 
 .moin-item-index
-    width 100%
-    margin-left 0.5em
+    width 99%
+    margin-left 0.5%
 
 .moin-item-index div
     float left
@@ -945,7 +945,8 @@ div.ct-hide
 .moin-index-separator
     clear both
     border-top border_style
-    width 80%
+    width 99%
+    margin-left .5%
     display none
 
 #moin-upload-cont
