--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -367,7 +367,7 @@ ul.moin-blog-entry-tags li:last-child:after{content:""}
 #moin-initials{width:90%;margin:5px auto;text-align:center}
 #moin-initials a{display:inline-block;margin:0;padding:4px 5px}
 #moin-initials a:hover,#moin-initials a.selected{background:#00008b;border-radius:5px;color:#fff;text-decoration:none}
-.moin-item-index{width:100%;margin-left:.5em}
+.moin-item-index{width:99%;margin-left:.5%}
 .moin-item-index div{float:left;width:15em}
 .moin-item-index div .moin-select-item{visibility:hidden;display:inline-block;width:17px;cursor:default;background:transparent url("../img/moin-checkbox-off.png") no-repeat}
 .moin-item-index div.selected-item .moin-select-item,.moin-item-index div:hover .moin-select-item{visibility:visible}
@@ -394,7 +394,7 @@ div.ct-hide{background:transparent url("../img/moin-moveup.png") no-repeat cente
 .moin-index-path{margin-left:.5em}
 .moin-index-path:before{content:url("../img/moin-parent.png");margin:0 .3em}
 .moin-path-separator{font-size:120%;color:#00008b}
-.moin-index-separator{clear:both;border-top:1px solid #4e7da9;width:80%;display:none}
+.moin-index-separator{clear:both;border-top:1px solid #4e7da9;width:99%;margin-left:.5%;display:none}
 #moin-upload-cont{min-height:10px}
 #file_upload{margin-top:2em}
 form.upload_file{background-color:#708090;border:1px solid boredr_color;color:#cfcfcf;cursor:pointer;direction:ltr;font-weight:bold;height:2.5em;line-height:2.5em;overflow:hidden;position:relative;text-align:center;width:15em;box-shadow:0 0 5px #708090}
