--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -948,6 +948,9 @@ div.ct-hide
     width 99%
     margin-left .5%
     display none
+    
+.moin-transclusion
+    max-width 100%
 
 #moin-upload-cont
     min-height 10px
