--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -92,6 +92,7 @@ div p
     width content_width_no_panel
     padding local_padding_width
     {'border-' + opposite-position(dir)} border_style
+    
 
 #moin-content
     float dir
@@ -842,6 +843,7 @@ p.searchhint
 // lists
 ul, dl
     margin-left 1.5em
+    margin-bottom .5em
 ol
     // ordered list, first level needs big margin that will contain the number
     margin-left 3em
