--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -989,6 +989,9 @@ textarea
     border border_style
     margin-left .5em
 
+#f_meta_text
+    margin-left -.6em
+
 input#f_comment
     width 96%
     border border_style
