--- a/MoinMoin/apps/admin/templates/user/index_user.html
+++ b/MoinMoin/apps/admin/templates/user/index_user.html
@@ -1,5 +1,9 @@
 {% extends theme("layout.html") %}
 {% block content %}
+<h1>{{ _("Documentation") }}</h1>
+<ul>
+    <li><a href="{{ url_for('serve.files', name='docs', filename='index.html') }}">{{ _("Documentation (local)") }}</a></li>
+</ul>
 <h1>{{ _("User Menu") }}</h1>
 <ul>
     <li><a href="{{ url_for('frontend.wanted_items') }}">{{ _("Wanted Items") }}</a></li>
