--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -193,7 +193,7 @@ pre
     clear both
     font-family monospace
     margin .33em 0
-    white-space pre
+    white-space pre-wrap
 
 pre.comment
     background-color header_bg_color
