--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -720,7 +720,7 @@ a
     margin 0
     padding 6px 6px 6px 38px
     background-color heading_color
-    border-bottom border style
+    border-bottom border_style
     background-repeat no-repeat
     background-position 16px center
 
