--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -647,7 +647,8 @@ a.moin-conflict:before
     font-size 1.2em
     table
         margin 0
-        width 100%
+        width 100% !important
+        border none !important
 
 .moin-history-save:before
     content url('../img/moin-edit.png')
