Modernized theme moin-flash moved into moin-content from moin-page

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1122,9 +1122,8 @@ ul.moin-tags li.weight9
     font-size 200%
 
 #moin-flash
-    margin 0
-    display table-row
-
+    margin -8px -24px
+    
 .moin-flash
     margin 0
     padding 6px 6px 6px 38px
